survey paper goes on

--- a/aalto.bib
+++ b/aalto.bib
@@ -631,6 +631,21 @@
   file = {/home/avnerus/Zotero/storage/BZIW8QH7/Bassuk - 1987 - Incarnation in Hinduism and Christianity.pdf}
 }
 
+@book{bay-chengMappingIntermedialityPerformance2010,
+  title = {Mapping Intermediality in Performance},
+  editor = {{Bay-Cheng}, Sarah},
+  year = {2010},
+  series = {Media Matters},
+  publisher = {{Amsterdam University Press}},
+  address = {{Amsterdam}},
+  isbn = {978-90-8964-255-4},
+  langid = {english},
+  lccn = {NX180.I56 M36 2010},
+  keywords = {Digital media,Digitale technieken,Intermedialiteit,Intermediality,Massamedia,Performance art,Toneel,Uitvoerende kunsten},
+  annotation = {OCLC: ocn659708071},
+  file = {/home/avnerus/Zotero/storage/XEFWUX6X/Bay-Cheng - 2010 - Mapping intermediality in performance.pdf}
+}
+
 @misc{BEAMHereAnywhere,
   title = {{{BEAM}} - {{From Here}} to {{Anywhere}}},
   journal = {Beam},
@@ -745,6 +760,22 @@
   doi = {10.1086/209154},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/TD9QAH8S/Belk - 1988 - Possessions and the Extended Self.pdf}
+}
+
+@article{benfordPerformanceLedResearchWild2013,
+  title = {Performance-{{Led Research}} in the {{Wild}}},
+  author = {Benford, Steve and Greenhalgh, Chris and Crabtree, Andy and Flintham, Martin and Walker, Brendan and Marshall, Joe and Koleva, Boriana and Rennick Egglestone, Stefan and Giannachi, Gabriella and Adams, Matt and Tandavanitj, Nick and Row Farr, Ju},
+  year = {2013},
+  month = jul,
+  journal = {ACM Transactions on Computer-Human Interaction},
+  volume = {20},
+  number = {3},
+  pages = {14:1--14:22},
+  issn = {1073-0516},
+  doi = {10.1145/2491500.2491502},
+  abstract = {We explore the approach of performance-led research in the wild in which artists drive the creation of novel performances with the support of HCI researchers that are then deployed and studied at public performance in cultural settings such as galleries, festivals and on the city streets. We motivate the approach and then describe how it consists of three distinct activities -- practice, studies and theory -- that are interleaved in complex ways through nine different relationships. We present a historical account of how the approach has evolved over a fifteen-year period, charting the evolution of a complex web of projects, papers, and relationships between them. We articulate the challenges of pursuing each activity as well as overarching challenges of balancing artistic and research interests, flexible management of relationships, and finally ethics.},
+  keywords = {Art,ethnography,in the wild,methodology,performance,performance-led,theory},
+  file = {/home/avnerus/Zotero/storage/9PVWGTFS/Benford et al. - 2013 - Performance-Led Research in the Wild.pdf}
 }
 
 @book{benjaminCyborgSubject2016,
@@ -971,6 +1002,20 @@
   abstract = {Intergroup contact is one of the most promising and effective strategies for reducing prejudice. Importantly, intergroup contact not only improves attitudes towards an encountered outgroup member but also to the outgroup as a whole (i.e., primary transfer effects), to other outgroups (i.e., secondary transfer effects), and even enhances cognitive functioning beyond intergroup relations (i.e., tertiary transfer effect). In this article, we first review the recent developments on primary, secondary, and tertiary contact generalization. We then summarize mechanisms that underlie and condition each of these generalizations. Third, we highlight key critiques against the contact literature identifying avenues for future research on generalization processes. Lastly, we underline the policy value of research on generalization effects.},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/HXACDJEQ/Boin et al. - 2021 - The generalization of intergroup contact effects .pdf}
+}
+
+@book{bolterRemediationUnderstandingNew1999,
+  title = {Remediation: Understanding New Media},
+  shorttitle = {Remediation},
+  author = {Bolter, J. David and Grusin, Richard A.},
+  year = {1999},
+  publisher = {{MIT Press}},
+  address = {{Cambridge, Mass}},
+  isbn = {978-0-262-02452-5},
+  langid = {english},
+  lccn = {P96.T42 B59 1998},
+  keywords = {Mass media,Technological innovations},
+  file = {/home/avnerus/Zotero/storage/KUPEN8UV/Bolter and Grusin - 1999 - Remediation understanding new media.pdf}
 }
 
 @inproceedings{bonariniHuggableMobileRobot2016,
@@ -1706,6 +1751,14 @@
   file = {/home/avnerus/Zotero/storage/4K9NXB24/Choi and Kwak - 2017 - Who is this Identity and presence in robot-media.pdf}
 }
 
+@book{chomskyFatefulTriangleUnited1999,
+  title = {Fateful {{Triangle}}: {{The United States}}, {{Israel}}, and the {{Palestinians}}},
+  author = {Chomsky, Noam},
+  year = {1999},
+  publisher = {{South End Press}},
+  isbn = {0-89608-601-1}
+}
+
 @article{chouliarakiImproperDistanceCritical2011,
   title = {`{{Improper}} Distance': {{Towards}} a Critical Account of Solidarity as Irony},
   shorttitle = {`{{Improper}} Distance'},
@@ -2112,6 +2165,40 @@
   isbn = {0025-1909}
 }
 
+@article{dahdalLessonsIsraeliPalestinianConflict2021,
+  title = {Lessons of the {{Israeli-Palestinian Conflict}} for {{Public Health}}: {{The Case}} of the {{COVID-19 Vaccination Gap}}},
+  shorttitle = {Lessons of the {{Israeli-Palestinian Conflict}} for {{Public Health}}},
+  author = {Dahdal, Yara and Davidovitch, Nadav and Gilmont, Michael and Lezaun, Javier and Negev, Maya and Sandler, Deborah and Shaheen, Mohammed},
+  year = {2021},
+  month = oct,
+  journal = {International Journal of Environmental Research and Public Health},
+  volume = {18},
+  number = {21},
+  pages = {11292},
+  issn = {1660-4601},
+  doi = {10.3390/ijerph182111292},
+  abstract = {In early 2020, the COVID-19 pandemic revealed a faceless, non-adversarial threat that endangered Israelis and Palestinians with the same ferocity. However, the capacities of the health systems to address it were not equal, with Israel more equipped for the outbreak with infrastructure, resources, manpower and later, vaccines. The pandemic demonstrated the life-saving benefits of cooperation and the self-defeating harms brought by non-cooperation. These trends are explored here by an international team of public health and environmental scholars, including those from different sides of the Israeli\textendash Palestinian conflict. This article explores the importance of recognizing the Israeli and Palestinian jurisdictions as a single epidemiological unit, and illustrates how doing so is a pragmatic positioning that can serve self-interest. We demonstrate how despite political shocks precipitating non-cooperation, there has been a recurrent tendency towards limited cooperation. The paper concludes with lessons over the need for reframing public health as a potential bridge, the need for structural changes creating sustainable platforms for accelerated transboundary cooperation to enable the steady management of current and future public and environmental health crises regardless of dynamic political crises, and the importance of civil society and international organizations in forging collaboration in advance of governmental engagement.},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/5KVTHQ8X/Dahdal et al. - 2021 - Lessons of the Israeli-Palestinian Conflict for Pu.pdf}
+}
+
+@article{dahdalLessonsIsraeliPalestinianConflict2021a,
+  title = {Lessons of the {{Israeli-Palestinian Conflict}} for {{Public Health}}: {{The Case}} of the {{COVID-19 Vaccination Gap}}},
+  shorttitle = {Lessons of the {{Israeli-Palestinian Conflict}} for {{Public Health}}},
+  author = {Dahdal, Yara and Davidovitch, Nadav and Gilmont, Michael and Lezaun, Javier and Negev, Maya and Sandler, Deborah and Shaheen, Mohammed},
+  year = {2021},
+  month = oct,
+  journal = {International Journal of Environmental Research and Public Health},
+  volume = {18},
+  number = {21},
+  pages = {11292},
+  issn = {1660-4601},
+  doi = {10.3390/ijerph182111292},
+  abstract = {In early 2020, the COVID-19 pandemic revealed a faceless, non-adversarial threat that endangered Israelis and Palestinians with the same ferocity. However, the capacities of the health systems to address it were not equal, with Israel more equipped for the outbreak with infrastructure, resources, manpower and later, vaccines. The pandemic demonstrated the life-saving benefits of cooperation and the self-defeating harms brought by non-cooperation. These trends are explored here by an international team of public health and environmental scholars, including those from different sides of the Israeli\textendash Palestinian conflict. This article explores the importance of recognizing the Israeli and Palestinian jurisdictions as a single epidemiological unit, and illustrates how doing so is a pragmatic positioning that can serve self-interest. We demonstrate how despite political shocks precipitating non-cooperation, there has been a recurrent tendency towards limited cooperation. The paper concludes with lessons over the need for reframing public health as a potential bridge, the need for structural changes creating sustainable platforms for accelerated transboundary cooperation to enable the steady management of current and future public and environmental health crises regardless of dynamic political crises, and the importance of civil society and international organizations in forging collaboration in advance of governmental engagement.},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/STV6RJE8/Dahdal et al. - 2021 - Lessons of the Israeli-Palestinian Conflict for Pu.pdf}
+}
+
 @book{daiConflictManagementIntercultural2017,
   title = {Conflict Management and Intercultural Communication: The Art of Intercultural Harmony},
   shorttitle = {Conflict Management and Intercultural Communication},
@@ -2457,6 +2544,14 @@
   file = {/home/avnerus/Zotero/storage/EMI945F2/Dovidio et al. - 2005 - On the nature of prejudice fifty years after Allp.pdf}
 }
 
+@misc{dr.chrissoveyEffortlesslyImprovePosture2015,
+  title = {Effortlessly {{Improve Posture While Sleeping}}},
+  author = {{Dr. Chris Sovey}},
+  year = {2015},
+  month = mar,
+  abstract = {Learn how to support your entire spine and improve posture while sleeping! If you are itching to skip the educational component of this video (not recommended), fast forward to 4:36. By Chris Sovey, DPT, RN, BSN http://www.healthyconsumer.com Disclaimer: This video is for educational purposes only. This is not medical advice. Always check with your healthcare provider before implementing anything in this video. If you have postural dysfunction, I highly recommend assessment by a qualified medical professional. After checking with your healthcare practitioner if this method suites your needs, be sure to discontinue immediately if you notice any pain or discomfort. Thumbnail by Joel Kramer: https://www.flickr.com/photos/7500151... -\textasciitilde -\textasciitilde\textasciitilde -\textasciitilde\textasciitilde\textasciitilde -\textasciitilde\textasciitilde -\textasciitilde - Fix rounded shoulders and forward head: "Massage To Improve Upper Body Posture -Part 2/2- Rounded shoulders, forward head posture (WBW Ep.27)"  https://www.youtube.com/watch?v=6fxcj... -\textasciitilde -\textasciitilde\textasciitilde -\textasciitilde\textasciitilde\textasciitilde -\textasciitilde\textasciitilde -\textasciitilde -}
+}
+
 @inproceedings{draudeBoundariesNotSit2020,
   title = {``{{Boundaries Do Not Sit Still}}'' from {{Interaction}} to {{Agential Intra-action}} in {{HCI}}},
   booktitle = {International {{Conference}} on {{Human-Computer Interaction}}},
@@ -2706,6 +2801,22 @@
   langid = {english},
   annotation = {OCLC: 845383358},
   file = {/home/avnerus/Zotero/storage/MQCXLANA/Fanon - 2008 - Black skin, white masks.pdf}
+}
+
+@article{farmanHypermediatingGameInterface2010,
+  title = {Hypermediating the {{Game Interface}}: {{The Alienation Effect}} in {{Violent Videogames}} and the {{Problem}} of {{Serious Play}}},
+  shorttitle = {Hypermediating the {{Game Interface}}},
+  author = {Farman, Jason},
+  year = {2010},
+  month = feb,
+  journal = {Communication Quarterly},
+  volume = {58},
+  number = {1},
+  pages = {96--109},
+  issn = {0146-3373, 1746-4102},
+  doi = {10.1080/01463370903550262},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/F6ZC63C3/Farman - 2010 - Hypermediating the Game Interface The Alienation .pdf}
 }
 
 @article{fauvilleNonverbalMechanismsPredict2021,
@@ -3340,6 +3451,17 @@
   file = {/home/avnerus/Zotero/storage/L4HY6H3S/Gatens and Lloyd - 2002 - Collective Imaginings.pdf}
 }
 
+@misc{GazaApparentWar2021,
+  title = {Gaza: {{Apparent War Crimes During May Fighting}}},
+  shorttitle = {Gaza},
+  year = {2021},
+  month = jul,
+  journal = {Human Rights Watch},
+  abstract = {Israeli forces and Palestinian armed groups carried out attacks during the May 2021 fighting in the Gaza Strip and Israel that violated the laws of war and apparently amount to war crimes.},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/HK8LYTS3/gaza-apparent-war-crimes-during-may-fighting.html}
+}
+
 @article{geDesignModelingEvaluation2020,
   title = {Design, {{Modeling}}, and {{Evaluation}} of {{Fabric-Based Pneumatic Actuators}} for {{Soft Wearable Assistive Gloves}}},
   author = {Ge, Lisen and Chen, Feifei and Wang, Dong and Zhang, Yifan and Han, Dong and Wang, Tao and Gu, Guoying},
@@ -3363,6 +3485,21 @@
   publisher = {{Clarendon Press}},
   isbn = {0-19-151215-X},
   file = {/home/avnerus/Zotero/storage/HAZYVRQV/the late Alfred Gell - Art and Agency_ An Anthropological Theory (1998).pdf}
+}
+
+@book{gershonBreakupDisconnectingNew2010,
+  title = {The Breakup 2.0: Disconnecting over New Media},
+  shorttitle = {The Breakup 2.0},
+  author = {Gershon, Ilana},
+  year = {2010},
+  publisher = {{Cornell University Press}},
+  address = {{Ithaca, N.Y}},
+  isbn = {978-0-8014-4859-1},
+  langid = {english},
+  lccn = {HM851 .G4723 2010},
+  keywords = {Digital media,Interpersonal communication,Online etiquette,Psychological aspects,Rejection (Psychology),Separation (Psychology),Social aspects,Technological innovations Social aspects},
+  annotation = {OCLC: ocn499742411},
+  file = {/home/avnerus/Zotero/storage/QYRNNLS6/Gershon - 2010 - The breakup 2.0 disconnecting over new media.pdf}
 }
 
 @book{geSocialRobotics4th2012,
@@ -3408,7 +3545,7 @@
   title = {A {{Thousand Plateaus}}: {{Capitalism}} and {{Schizophrenia}}},
   shorttitle = {A {{Thousand Plateaus}}},
   author = {Gilman, Sander L. and Deleuze, Gilles and Guattari, Felix and Massumi, Brian},
-  year = {21},
+  year = 1989,
   journal = {Journal of Interdisciplinary History},
   volume = {19},
   number = {4},
@@ -3594,6 +3731,22 @@
   abstract = {Current approaches to humanizing members of an outgroup in contexts marked by protracted intergroup conflict see mixed success. In both Study 1, conducted on a random sample of Israeli Jews (N = 103), and Study 2, conducted on a nationally diverse sample of Israeli Jews (N = 670), we experimentally test the effect of a unique approach to humanizing the outgroup based on empathy. Instead of requiring individuals to express empathy for outgroup suffering they might have caused, this approach requires an expression of empathy for suffering unrelated to the conflict between the groups. Results suggest that such an expression of empathy from one group member toward the other group can lead to ``reciprocal empathy'' which facilitates a greater willingness to accept the humanity of all members of the other group.},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/K82MDYAQ/Gubler et al. - 2015 - Humanizing the Outgroup in Contexts of Protracted .pdf}
+}
+
+@article{guckelsbergerEmbodimentComputationalCreativity2021,
+  title = {Embodiment and {{Computational Creativity}}},
+  author = {Guckelsberger, Christian and Kantosalo, Anna and {Negrete-Yankelevich}, Santiago and Takala, Tapio},
+  year = {2021},
+  month = jul,
+  journal = {arXiv:2107.00949 [cs]},
+  eprint = {2107.00949},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  abstract = {We conjecture that creativity and the perception of creativity are, at least to some extent, shaped by embodiment. This makes embodiment highly relevant for computational creativity (CC) research, but existing research is scarce and the use of the concept highly ambiguous. We overcome this situation by means of a systematic review and a prescriptive analysis of publications at the International Conference on Computational Creativity. We adopt and extend an established typology of embodiment to resolve ambiguity through identifying and comparing different usages of the concept. We collect, contextualise and highlight opportunities and challenges in embracing embodiment in CC as a reference for research, and put forward important directions to further the embodied CC research programme.},
+  archiveprefix = {arXiv},
+  langid = {english},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Human-Computer Interaction,Computer Science - Robotics},
+  file = {/home/avnerus/Zotero/storage/TJ3ABX75/Guckelsberger et al. - 2021 - Embodiment and Computational Creativity.pdf}
 }
 
 @article{gunkelRealProblemAvatars2010,
@@ -4423,6 +4576,24 @@
   file = {/home/avnerus/Zotero/storage/BSBIJNZU/Honauer et al. - 2020 - WORM-E An Interactive Toy Enriching Children's Bo.pdf}
 }
 
+@article{hongBoundaryCurvatureGuided2022,
+  title = {Boundary Curvature Guided Programmable Shape-Morphing Kirigami Sheets},
+  author = {Hong, Yaoye and Chi, Yinding and Wu, Shuang and Li, Yanbin and Zhu, Yong and Yin, Jie},
+  year = {2022},
+  month = jan,
+  journal = {Nature Communications},
+  volume = {13},
+  number = {1},
+  pages = {1--13},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-022-28187-x},
+  abstract = {Kirigami, a traditional paper cutting art, offers a promising strategy for 2D-to-3D shape morphing through cut-guided deformation. Here, authors report a simple strategy of cut boundary curvature-guided 3D shape morphing and its applications in non-destructive grippers and dynamically conformable heaters.},
+  copyright = {2022 The Author(s)},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/6CV3VDU9/Hong et al. - 2022 - Boundary curvature guided programmable shape-morph.pdf;/home/avnerus/Zotero/storage/GRZ84W46/s41467-022-28187-x.html}
+}
+
 @article{honkelaRauhankoneTekoalytutkijanTestamentti2017,
   title = {Rauhankone: Teko\"alytutkijan Testamentti},
   author = {Honkela, Timo},
@@ -5242,6 +5413,14 @@
   isbn = {978-1-5386-1482-2},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/27QQ3AQ8/Katayama et al. - 2018 - Sharing the Positional Relationship with the Bidir.pdf}
+}
+
+@article{kattenbeltIntermedialityTheatrePerformance,
+  title = {Intermediality in {{Theatre}} and {{Performance}}: {{Definitions}}, {{Perceptions}} and {{Medial Relationships}}},
+  author = {Kattenbelt, Chiel},
+  pages = {11},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/8QAAS8YF/Kattenbelt - Intermediality in Theatre and Performance Definit.pdf}
 }
 
 @incollection{katzMachinesBecomeUs2017,
@@ -6576,7 +6755,7 @@
   title = {Peace {{Building}} in {{Violent Conflict}}: {{Israeli-Palestinian Post-Oslo People-to-People Activities}}},
   shorttitle = {Peace {{Building}} in {{Violent Conflict}}},
   author = {Maoz, Ifat},
-  year = {21},
+  year = 2003,
   journal = {International Journal of Politics, Culture, and Society},
   volume = {17},
   number = {3},
@@ -9092,6 +9271,24 @@
   file = {/home/avnerus/Zotero/storage/WGVRHHQK/5reasonswhyZoommeetingsaresoexhausting.pdf}
 }
 
+@article{sandersPectoralisMinorSyndrome2017,
+  title = {Pectoralis {{Minor Syndrome}}: {{Subclavicular Brachial Plexus Compression}}},
+  shorttitle = {Pectoralis {{Minor Syndrome}}},
+  author = {Sanders, Richard J. and Annest, Stephen J.},
+  year = {2017},
+  month = jul,
+  journal = {Diagnostics},
+  volume = {7},
+  number = {3},
+  pages = {46},
+  issn = {2075-4418},
+  doi = {10.3390/diagnostics7030046},
+  abstract = {The diagnosis of brachial plexus compression\textemdash either neurogenic thoracic outlet syndrome (NTOS) or neurogenic pectoralis minor syndrome (NPMS)\textemdash is based on old fashioned history and physical examination. Tests, such as scalene muscle and pectoralis minor muscle blocks are employed to confirm a diagnosis suspected on clinical findings. Electrodiagnostic studies can confirm a diagnosis of nerve compression, but cannot establish it. This is not a diagnosis of exclusion; the differential and associated diagnoses of upper extremity pain are always considered. Also discussed is conservative and surgical treatment options.},
+  pmcid = {PMC5617946},
+  pmid = {28788065},
+  file = {/home/avnerus/Zotero/storage/R65YMDYK/Sanders and Annest - 2017 - Pectoralis Minor Syndrome Subclavicular Brachial .pdf}
+}
+
 @book{sandoleHandbookConflictAnalysis2009,
   title = {Handbook of Conflict Analysis and Resolution},
   editor = {Sandole, Dennis J. D.},
@@ -9269,7 +9466,7 @@
 @article{schumannRadicalityPuppetTheatre24,
   title = {The {{Radicality}} of the {{Puppet Theatre}}},
   author = {Schumann, Peter},
-  year = {24},
+  year = 1991,
   journal = {TDR (1988-)},
   volume = {35},
   number = {4},
@@ -9468,6 +9665,21 @@
 @misc{sharedstudiosPortals,
   title = {Portals},
   author = {{SharedStudios}}
+}
+
+@article{shenRobotsCOVID19Pandemic2021,
+  title = {Robots {{Under COVID-19 Pandemic}}: {{A Comprehensive Survey}}},
+  shorttitle = {Robots {{Under COVID-19 Pandemic}}},
+  author = {Shen, Yang and Guo, Dejun and Long, Fei and Mateos, Luis A. and Ding, Houzhu and Xiu, Zhen and Hellman, Randall B. and King, Adam and Chen, Shixun and Zhang, Chengkun and Tan, Huan},
+  year = {2021},
+  journal = {IEEE Access},
+  volume = {9},
+  pages = {1590--1615},
+  issn = {2169-3536},
+  doi = {10.1109/ACCESS.2020.3045792},
+  abstract = {As a result of the difficulties brought by COVID-19 and its associated lockdowns, many individuals and companies have turned to robots in order to overcome the challenges of the pandemic. Compared with traditional human labor, robotic and autonomous systems have advantages such as an intrinsic immunity to the virus and an inability for human-robot-human spread of any disease-causing pathogens, though there are still many technical hurdles for the robotics industry to overcome. This survey comprehensively reviews over 200 reports covering robotic systems which have emerged or have been repurposed during the past several months, to provide insights to both academia and industry. In each chapter, we cover both the advantages and the challenges for each robot, finding that robotics systems are overall apt solutions for dealing with many of the problems brought on by COVID-19, including: diagnosis, screening, disinfection, surgery, telehealth, care, logistics, manufacturing and broader interpersonal problems unique to the lockdowns of the pandemic. By discussing the potential new robot capabilities and fields they applied to, we expect the robotics industry to take a leap forward due to this unexpected pandemic.},
+  keywords = {autonomous systems,COVID-19,drones,Industries,learning,Pandemics,public health,review,robots,Robots,SARS-CoV-2,sensors,Service robots,survey,Testing,Viruses (medical)},
+  file = {/home/avnerus/Zotero/storage/5FWKC8AB/Shen et al. - 2021 - Robots Under COVID-19 Pandemic A Comprehensive Su.pdf;/home/avnerus/Zotero/storage/VAIV7R98/9298765.html}
 }
 
 @inproceedings{shenStopSeeConflict2018,
@@ -10390,6 +10602,12 @@
   langid = {english}
 }
 
+@article{teranNoGoingBack2021,
+  title = {No {{Going Back}}: {{The Effect}} of the {{Trump Administration}} on the {{Israeli-Palestinian Conflict}}},
+  author = {Teran, Rachel},
+  year = {2021}
+}
+
 @incollection{thimmMediatizedPoliticsStructures2014,
   title = {Mediatized Politics\textemdash{{Structures}} and Strategies of Discursive Participation and Online Deliberation on {{Twitter}}},
   booktitle = {Mediatized Worlds},
@@ -10727,6 +10945,24 @@
   journal = {NeuroQuantology},
   volume = {1},
   number = {2}
+}
+
+@article{viveashHasPresidentTrump2021,
+  title = {Has {{President Trump}} Killed the {{Middle East Peace Process}}?},
+  author = {Viveash, David},
+  year = {2021},
+  month = jan,
+  journal = {Canadian Foreign Policy Journal},
+  volume = {27},
+  number = {1},
+  pages = {49--61},
+  publisher = {{Routledge}},
+  issn = {1192-6422},
+  doi = {10.1080/11926422.2020.1842219},
+  abstract = {President Donald Trump's long-awaited Middle East peace plan was unveiled on 28 January 2020. Some observers have suggested that the Trump vision is less a plan for peace than a unilateral statement of the terms for Palestinian surrender: Jerusalem as the undivided capital of Israel, no refugee return and Israel's annexation of the Jordan valley and all West Bank settlements in exchange for an ``archipelago'' state and the promise of a \$50 billion investment fund. This policy commentary assesses what the Trump plan means for the peace process launched in Madrid in 1991. It reviews the evolution of the Madrid/Oslo process with particular emphasis on the underlying principles the Trump plan appears to contradict. It examines Canada's role in the process, assesses Ottawa's initial response to the Trump plan in terms of long-standing Canadian policy and outlines ways in which Canada could influence the debate going forward.},
+  keywords = {Israel,Middle East (Madrid) peace process,Netanyahu,Palestinian,Trump},
+  annotation = {\_eprint: https://doi.org/10.1080/11926422.2020.1842219},
+  file = {/home/avnerus/Zotero/storage/8AHMKTS6/Viveash - 2021 - Has President Trump killed the Middle East Peace P.pdf;/home/avnerus/Zotero/storage/TZ7AJ76L/11926422.2020.html}
 }
 
 @article{vociIntergroupContactPrejudice2003,
